[package rename] -> com.fsl

--- a/androidworksheet/app/src/main/AndroidManifest.xml
+++ b/androidworksheet/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.coyotedev.androidworksheet">
+    package="com.fsl.androidworksheet">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name="com.fsl.androidworksheet.MainActivity"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".uiadapter.elementfileupload.HelperActivity"></activity>
+        <activity android:name="com.fsl.androidworksheet.uiadapter.elementfileupload.HelperActivity"></activity>
     </application>
 
 </manifest>
