Вынос общих частей в отдельные катологи

--- a/androidworksheet/app/build.gradle
+++ b/androidworksheet/app/build.gradle
@@ -18,6 +18,13 @@ android {
     }
     productFlavors {
     }
+
+    sourceSets {
+        main {
+            java.srcDirs += ['src/main/common']
+        }
+    }
+
 }
 
 dependencies {
