--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ sourceCompatibility = 1.8
 
 apply plugin: 'java'
 
+sourceSets {
+    main {
+        java.srcDirs += ['src/common']
+    }
+}
+
+
 repositories {
     mavenCentral()
 }
