[com.fsl.creditorapp] Переименование пакета для совместимости

--- a/androidworksheet/app/build.gradle
+++ b/androidworksheet/app/build.gradle
@@ -22,6 +22,7 @@ android {
     sourceSets {
         main {
             java.srcDirs += ['src/main/common']
+            res.srcDirs += ['src/main/common_res/res']
         }
     }
 
